Disable the autofill password manager when a credential is sent via CM API.

BUG=599836

Review URL: https://codereview.chromium.org/1850923004

Cr-Commit-Position: refs/heads/master@{#385164}

Former-commit-id: e8290aba0af11ae589b30209ddb570202a93b5cf